--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Tg Eğlence Bot",
   "description": "Pyrogram İle Yazılmış Bir Eğlence Botu",
-  "repository": "https://github.com/AkinYoungSoftware/TgEglenceBot.git",
+  "repository": "https://github.com/cancinconntg/TgEglenceBot",
   "logo": "https://telegramchannels.me/storage/media-logo/2001/dcgamebot.jpg",
   "keywords": ["telegram", "game", "pyrogram","telegram bot"],
   "env": {
@@ -15,7 +15,7 @@
       "description": "API_HASH'iniz https://my.telegram.org/apps dan ala bilirsiniz"
     },
     "OWNER_ID": {
-      "description": "Botunuzda Yetmili Olmasini Istediginiz Kisilerin Idleri"
+      "description": "Botunuzda Yetkili Olmasini Istediginiz Kisilerin Idleri"
     }
    },
    "buildpacks": [
